--- a/Workspace/CharacterScreen/style.css
+++ b/Workspace/CharacterScreen/style.css
@@ -9,7 +9,21 @@
 .map-nav-logo:hover{
     filter: drop-shadow(0px 0px 4px #D7B232);
 }
+/* .bg::before {
+    content: "";
+
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    
+    background: linear-gradient(
+        to bottom, 
+        rgba(64,64,64,0) 80%, 
+        rgb(0, 0, 0, 1) 100%
+    ); 
+} */
+
 .bg {
+    
     overflow: hidden;
     
     animation: MoveLeftRightBG 60s ease-in-out infinite;
@@ -24,18 +38,6 @@
     background-size: 300%;
 }
 
-.bgblur::before {
-    content: "";
-
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    
-    background: linear-gradient(
-        to bottom, 
-        rgba(64,64,64,0) 80%, 
-        rgb(0, 0, 0, 0.8) 100%
-    ); 
-}
 .bgblur{
     display: flex;
     justify-content: end;
@@ -56,6 +58,7 @@
 
     color: #FFFFFF;
 }
+
 .heroes{
     
     z-index: 100;
@@ -72,11 +75,11 @@
     font-weight: 400;
     font-size: auto;
     line-height: 61px;
-    height: 10%;
+    height: 15%;
     /* margin-top: -10vw; */
     color:white;
 }
-.image1, .image2, .image3, .image4, .image5{
+.image1, .image2, .image3, .image4, .image5,.image6,.image7,.image8,.image9,.image10{
     /* margin-top: 50px; */
     float: right;
     height: 70%;
@@ -88,51 +91,68 @@
     background-repeat: no-repeat;
     /* background-size: 110%; */
     transition: all 0.5s;
-    z-index: 150;
+    z-index: 80;
     justify-content: center;
     /* background-image: url('Images/hero_3.png'); */
 }
-.image1{
+.image1{ 
     background-image: url('Images/5.svg');
-    
 }
 .image2{
-    background-image: url('Images/hero_3.png');
+    background-image: url('Images/4.svg');
 }
 .image3{
-    background-image: url('Images/5.svg');
+    background-image: url('Images/3.svg');
     
 }
 .image4{
-    background-image: url('Images/hero_3.png');
+    background-image: url('Images/1.svg');
 }
 .image5{
-    background-image: url('Images/5.svg');
+    background-image: url('Images/2.svg');
     
+}
+.image6{
+    background-image: url('Images/9.svg');
+}
+.image7{
+    background-image: url('Images/8.svg');
+}
+.image8{
+    background-image: url('Images/6.svg');
+}
+.image9{
+    background-image: url('Images/7.svg');
+}
+.image10{
+    background-image: url('Images/10.svg');
 }
 
 
 .logo{
-    height: 20%;
+    height: 15%;
     transition: all 0.5s;
     filter: grayscale(100%); position: relative; top: 20px;
 }
-.container{
-    /* min-width: 20vw; */
+.container:hover .logo{
     
+    filter: none;
+}
+
+.container{
+    
+    /* min-width: 20vw; */
     min-width: 20vw;
     transition: all 0.5s;
+    z-index: 80;
     
 }
 
-.ctr1:hover, .ctr2:hover, .ctr3:hover, .ctr4:hover, .ctr5:hover{
-    
-    filter: grayscale(0%);
-}
 
-.ctr1:hover .image1, .ctr2:hover .image2, .ctr3:hover .image3, .ctr4:hover .image4, .ctr5:hover .image5{
+.ctr1:hover .image1, .ctr2:hover .image2, .ctr3:hover .image3, .ctr4:hover .image4, .ctr5:hover .image5, .ctr6:hover .image6, .ctr7:hover .image7, .ctr8:hover .image8, .ctr9:hover .image9, .ctr10:hover .image10{
     /* backdrop-filter: drop-shadow(16px 16px 10px black); */
     width: calc(60vw);
+     filter: grayscale(0%);
     background-size: fill;
     object-position: bottom;
     min-width: 20vw;
@@ -141,25 +161,39 @@
     object-position: center;
     max-width: auto;
     margin-right: -20vw;
-    z-index: 100;
+    z-index: 150;
 } 
 
 .ctr1:hover{
-    box-shadow:  0px 0px 50px 3px purple;
-}
-.ctr2:hover{
-    box-shadow:  0px 0px 50px 3px red;
-}
-.ctr3:hover{
     box-shadow:  0px 0px 50px 3px #1AD1B1;
 }
+.ctr2:hover{
+    box-shadow:  0px 0px 50px 3px #F04D43;
+}
+.ctr3:hover{
+    box-shadow:  0px 0px 50px 3px #985AEA;
+}
 .ctr4:hover{
-    box-shadow:  0px 0px 50px 3px yellow;
+    box-shadow:  0px 0px 50px 3px #5BD6DF;
 }
 .ctr5:hover{
-    box-shadow:  0px 0px 50px 3px white;
+    box-shadow:  0px 0px 50px 3px #F04D43;
 }
-
+.ctr6:hover{
+    box-shadow:  0px 0px 50px 3px #1AD1B1;
+}
+.ctr7:hover{
+    box-shadow:  0px 0px 50px 3px #2993F4;
+}
+.ctr8:hover{
+    box-shadow:  0px 0px 50px 3px #F04D43;
+}
+.ctr9:hover{
+    box-shadow:  0px 0px 50px 3px #985AEA;
+}
+.ctr10:hover{
+    box-shadow:  0px 0px 50px 3px #E3C348;
+}
 @keyframes MoveLeftRightBG {
     0%, 100% {
         background-position: left;
@@ -172,7 +206,7 @@
 .nav2{
     left: calc(50vw - 155px); top: 90px; width: 310px; object-position: center; border-radius: 20px;
     display: flex;
-    height: 72px;
+    height: 65px;
     flex-direction: row;
 }
 .nav2 div{
@@ -184,7 +218,9 @@
 .nav2 img{
     width: 80%;
 }
+
 @media only screen and (max-width: 1450px){
+    
     .ctr5{
         display: none;
     }
@@ -209,6 +245,10 @@
     }
 }
 @media only screen and (max-width: 832px){
+    .nav2{
+        width: 200px;left: calc(50vw - 100px); 
+        margin: 0 auto 0 auto;
+    }
     .ctr5, .ctr4, .ctr3{
         display: none;
     }
@@ -218,6 +258,6 @@
     }
     .ctr2:hover .image2, .ctr1:hover .image1{
         width: 80vw;
-        margin-right: -15vw;
+        margin-right: calc((80vw - (100vw/2)) / -2);
     }
 }
