--- a/Workspace/LoginPage/style.css
+++ b/Workspace/LoginPage/style.css
@@ -6,12 +6,19 @@
 
 body{
     height: 100vh;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
     padding:0;
     margin:0;
     color: black;
     background-image: url('Images/JenshinBackGround.svg');
     background-size: cover;
+
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    text-decoration: none;
 }
 
 section{
@@ -30,6 +37,7 @@ section{
 }
 
 .register-Area{
+    /* overflow-y: scroll; */
     backdrop-filter: blur(100px);
     width: 50vw;
     display: flex;
