--- a/Workspace/LoginPage/style.css
+++ b/Workspace/LoginPage/style.css
@@ -40,7 +40,9 @@ section{
     /* overflow-y: scroll; */
     backdrop-filter: blur(100px);
     width: 50vw;
+    height: calc(95vh - 80px);
     display: flex;
+    padding: 80px 0 5vh 0;
     flex-direction: column;
     align-content: center;
     justify-content: center;
@@ -61,6 +63,28 @@ section{
     background-size: contain;
     display: block;
     /* margin-left: 23.5vw; */
+}
+.agreement{
+    /* border:3px solid #ddd; */
+    margin: 3% auto 0 auto;
+    display: flex;
+    flex-direction: row;
+    /* width: fit-content; */
+    font-family: 'HYWenHei';
+    font-size: 15px;
+    font-style: normal;
+    color: #FFFFFF;
+    /* margin: 0 auto 0 auto; */
+}
+.agreement > label{
+    margin: auto 0 auto 10px;
+}
+
+#checkbox{
+    display: inline-block;
+    margin: 0 0 0 0 ;
+    height: 25px;
+    width: 25px;
 }
 
 .register{
@@ -126,13 +150,9 @@ margin-top: 2.5%;
 
 
 input{
-    
-    /*border: 10px solid black;*/
     position: relative;
     width: 60%;
     height: 7vh;
-    /* margin: 10px 0 10px calc(20vw/2); */
-    /* margin-left: calc(auto/2); */
     background-color:#D9D9D9;  
   box-sizing: border-box;
     border-radius: 10px;
