--- a/Workspace/CharacterScreen/style.css
+++ b/Workspace/CharacterScreen/style.css
@@ -464,7 +464,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   right: 25px;
-  top: 25px
+  top: 25px;
 }
 .overlay {
   display: flex;
