--- a/Workspace/HomeScreen/style.css
+++ b/Workspace/HomeScreen/style.css
@@ -72,18 +72,18 @@
 
 
 
-@media only screen and (max-width: 900px)
+@media only screen and (max-height: 900px)
 {
     .main-megatron-buttons{
         height: 30vh;
         bottom: 55%;
     }
 }
-@media only screen and (max-width: 410px)
+@media only screen and (max-height: 410px)
 {
     .main-megatron-buttons{
-        height: 20vh;
-        bottom: 65%;
+        scale: 0.5;
+        bottom: 50%;
     }
 }
 @media only screen and (max-width: 1100px)
